force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>Used to store and manage individual job applications.  Captures essential job-related details such contact details, interview schedules, notes, and tasks</description>
    <label>Job Application</label>
    <nameField>
        <label>Job Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>