force-app/main/default/objects/Job_Application__c/fields/Job_Rating__c.field-meta.xml
<CustomField>
    <fullName>Job_Rating__c</fullName>
    <label>Job Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dream Job</fullName>
            </value>
            <value>
                <fullName>High Interest</fullName>
            </value>
            <value>
                <fullName>Moderate Interest</fullName>
            </value>
            <value>
                <fullName>Low Interest</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>