force-app/main/default/objects/Job_Application__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Job location (City, Remote, Hybrid, etc)</description>
    <inlineHelpText>Job location (City, Remote, Hybrid, etc)</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>