force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Rate of salary in USD</description>
    <inlineHelpText>Rate of salary in USD</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>