force-app/main/default/objects/Job_Application__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>