force-app/main/default/objects/Job_Application__c/fields/Sourced_From__c.field-meta.xml
<CustomField>
    <fullName>Sourced_From__c</fullName>
    <description>The site where the job listing was originally posted</description>
    <label>Sourced From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>