force-app/main/default/objects/Job_Application__c/validationRules/New_Records_Require_Status_of_New.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Records_Require_Status_of_New</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  NOT(ISPICKVAL(Status__c, &quot;New&quot;))</errorConditionFormula>
    <errorMessage>When creating a Job Application record, the Status must be equal to &quot;New&quot;</errorMessage>
</ValidationRule>